--- a/interfaces/_tableschema_.tableschema.html
+++ b/interfaces/_tableschema_.tableschema.html
@@ -91,6 +91,7 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_tableschema_.tableschema.html#dateserializationfunction" class="tsd-kind-icon">date<wbr>Serialization<wbr>Function</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_tableschema_.tableschema.html#indexname" class="tsd-kind-icon">index<wbr>Name</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_tableschema_.tableschema.html#indexproperties" class="tsd-kind-icon">index<wbr>Properties</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_tableschema_.tableschema.html#partitionkeyfield" class="tsd-kind-icon">partition<wbr>Key<wbr>Field</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_tableschema_.tableschema.html#partitionkeytype" class="tsd-kind-icon">partition<wbr>Key<wbr>Type</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_tableschema_.tableschema.html#sortkeyfield" class="tsd-kind-icon">sort<wbr>Key<wbr>Field</a></li>
@@ -111,7 +112,7 @@
 					<div class="tsd-signature tsd-kind-icon">date<wbr>Serialization<wbr>Function<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/TableSchema.ts#L60">TableSchema.ts:60</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/TableSchema.ts#L84">TableSchema.ts:84</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -158,7 +159,7 @@
 					<div class="tsd-signature tsd-kind-icon">index<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/TableSchema.ts#L14">TableSchema.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/TableSchema.ts#L14">TableSchema.ts:14</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -168,12 +169,33 @@
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="indexproperties" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> index<wbr>Properties</h3>
+					<div class="tsd-signature tsd-kind-icon">index<wbr>Properties<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/TableSchema.ts#L20">TableSchema.ts:20</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>Additional information about the secondary index.  This is only used to fill
+							in the createTable call.</p>
+						</div>
+					</div>
+					<div class="tsd-type-declaration">
+						<h4>Type declaration</h4>
+						<ul class="tsd-parameters">
+						</ul>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="partitionkeyfield" class="tsd-anchor"></a>
 					<h3>partition<wbr>Key<wbr>Field</h3>
 					<div class="tsd-signature tsd-kind-icon">partition<wbr>Key<wbr>Field<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/TableSchema.ts#L19">TableSchema.ts:19</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/TableSchema.ts#L43">TableSchema.ts:43</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -188,7 +210,7 @@
 					<div class="tsd-signature tsd-kind-icon">partition<wbr>Key<wbr>Type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"string"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"number"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/TableSchema.ts#L24">TableSchema.ts:24</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/TableSchema.ts#L48">TableSchema.ts:48</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -203,7 +225,7 @@
 					<div class="tsd-signature tsd-kind-icon">sort<wbr>Key<wbr>Field<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/TableSchema.ts#L30">TableSchema.ts:30</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/TableSchema.ts#L54">TableSchema.ts:54</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -219,7 +241,7 @@
 					<div class="tsd-signature tsd-kind-icon">sort<wbr>Key<wbr>Type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"string"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"number"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/TableSchema.ts#L36">TableSchema.ts:36</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/TableSchema.ts#L60">TableSchema.ts:60</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -235,7 +257,7 @@
 					<div class="tsd-signature tsd-kind-icon">table<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/TableSchema.ts#L9">TableSchema.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/TableSchema.ts#L9">TableSchema.ts:9</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -250,7 +272,7 @@
 					<div class="tsd-signature tsd-kind-icon">ttl<wbr>Field<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/TableSchema.ts#L53">TableSchema.ts:53</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/TableSchema.ts#L77">TableSchema.ts:77</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -267,7 +289,7 @@
 					<div class="tsd-signature tsd-kind-icon">version<wbr>Key<wbr>Field<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/TableSchema.ts#L46">TableSchema.ts:46</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/TableSchema.ts#L70">TableSchema.ts:70</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -336,6 +358,9 @@
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_tableschema_.tableschema.html#indexname" class="tsd-kind-icon">index<wbr>Name</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_tableschema_.tableschema.html#indexproperties" class="tsd-kind-icon">index<wbr>Properties</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_tableschema_.tableschema.html#partitionkeyfield" class="tsd-kind-icon">partition<wbr>Key<wbr>Field</a>
