--- a/modules/_requestbuilder_.html
+++ b/modules/_requestbuilder_.html
@@ -104,7 +104,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/requestBuilder.ts#L710">requestBuilder.ts:710</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L791">requestBuilder.ts:791</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -153,7 +153,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/requestBuilder.ts#L727">requestBuilder.ts:727</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L808">requestBuilder.ts:808</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -204,7 +204,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/requestBuilder.ts#L665">requestBuilder.ts:665</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L746">requestBuilder.ts:746</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -254,7 +254,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/requestBuilder.ts#L481">requestBuilder.ts:481</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L484">requestBuilder.ts:484</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -289,7 +289,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/requestBuilder.ts#L521">requestBuilder.ts:521</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L524">requestBuilder.ts:524</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -324,7 +324,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/requestBuilder.ts#L456">requestBuilder.ts:456</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L459">requestBuilder.ts:459</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -353,13 +353,13 @@
 					<a name="buildcreatetableinput" class="tsd-anchor"></a>
 					<h3>build<wbr>Create<wbr>Table<wbr>Input</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">build<wbr>Create<wbr>Table<wbr>Input<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, readCapacity<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span>, writeCapacity<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">CreateTableInput</span></li>
+						<li class="tsd-signature tsd-kind-icon">build<wbr>Create<wbr>Table<wbr>Input<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a><span class="tsd-signature-symbol">[]</span>, readCapacity<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span>, writeCapacity<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">CreateTableInput</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/requestBuilder.ts#L560">requestBuilder.ts:560</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L563">requestBuilder.ts:563</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -371,7 +371,10 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>tableSchema: <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></h5>
+									<h5>tableSchema: <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a><span class="tsd-signature-symbol">[]</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>A single TableSchema or an array of TableSchemas when including secondary indexes.</p>
+									</div>
 								</li>
 								<li>
 									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> readCapacity: <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;1</span></h5>
@@ -402,7 +405,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/requestBuilder.ts#L326">requestBuilder.ts:326</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L329">requestBuilder.ts:329</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -440,7 +443,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/requestBuilder.ts#L613">requestBuilder.ts:613</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L694">requestBuilder.ts:694</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -470,7 +473,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/requestBuilder.ts#L92">requestBuilder.ts:92</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L92">requestBuilder.ts:92</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -511,7 +514,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/requestBuilder.ts#L112">requestBuilder.ts:112</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L115">requestBuilder.ts:115</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -546,7 +549,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/requestBuilder.ts#L366">requestBuilder.ts:366</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L369">requestBuilder.ts:369</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -600,7 +603,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/requestBuilder.ts#L29">requestBuilder.ts:29</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L29">requestBuilder.ts:29</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -633,7 +636,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/requestBuilder.ts#L432">requestBuilder.ts:432</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L435">requestBuilder.ts:435</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -678,7 +681,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/requestBuilder.ts#L178">requestBuilder.ts:178</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L181">requestBuilder.ts:181</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -725,7 +728,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/02ea97e/src/requestBuilder.ts#L632">requestBuilder.ts:632</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b5f3838/src/requestBuilder.ts#L713">requestBuilder.ts:713</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
