--- a/classes/_fluentdynameh_.fluentrequestbuilder.html
+++ b/classes/_fluentdynameh_.fluentrequestbuilder.html
@@ -133,7 +133,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c2483bb/src/FluentDynameh.ts#L11">FluentDynameh.ts:11</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L11">FluentDynameh.ts:11</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -200,7 +200,7 @@
 					<div class="tsd-signature tsd-kind-icon">executor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c2483bb/src/FluentDynameh.ts#L13">FluentDynameh.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L13">FluentDynameh.ts:13</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -231,7 +231,7 @@
 					<div class="tsd-signature tsd-kind-icon">request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">TRequest</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c2483bb/src/FluentDynameh.ts#L13">FluentDynameh.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L13">FluentDynameh.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -241,7 +241,7 @@
 					<div class="tsd-signature tsd-kind-icon">result<wbr>Getter<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c2483bb/src/FluentDynameh.ts#L13">FluentDynameh.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L13">FluentDynameh.ts:13</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -272,7 +272,7 @@
 					<div class="tsd-signature tsd-kind-icon">table<wbr>Schema<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c2483bb/src/FluentDynameh.ts#L13">FluentDynameh.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L13">FluentDynameh.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -289,7 +289,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c2483bb/src/FluentDynameh.ts#L36">FluentDynameh.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L36">FluentDynameh.ts:36</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -312,7 +312,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c2483bb/src/FluentDynameh.ts#L41">FluentDynameh.ts:41</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L41">FluentDynameh.ts:41</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -329,13 +329,13 @@
 					<a name="addprojection" class="tsd-anchor"></a>
 					<h3>add<wbr>Projection</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">add<wbr>Projection<span class="tsd-signature-symbol">(</span>attributes<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_fluentdynameh_.fluentrequestbuilder.html" class="tsd-signature-type">FluentRequestBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">TRequest</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">TResponse</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">TResult</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">add<wbr>Projection<span class="tsd-signature-symbol">(</span>attributes<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_fluentdynameh_.fluentrequestbuilder.html" class="tsd-signature-type">FluentRequestBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">TRequest</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">TResponse</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">Partial</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">TResult</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c2483bb/src/FluentDynameh.ts#L31">FluentDynameh.ts:31</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L31">FluentDynameh.ts:31</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -344,7 +344,7 @@
 									<h5>attributes: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="_fluentdynameh_.fluentrequestbuilder.html" class="tsd-signature-type">FluentRequestBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">TRequest</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">TResponse</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">TResult</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <a href="_fluentdynameh_.fluentrequestbuilder.html" class="tsd-signature-type">FluentRequestBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">TRequest</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">TResponse</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">Partial</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">TResult</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -358,7 +358,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c2483bb/src/FluentDynameh.ts#L16">FluentDynameh.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L16">FluentDynameh.ts:16</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">TResponse</span><span class="tsd-signature-symbol"> &amp; </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -375,7 +375,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/c2483bb/src/FluentDynameh.ts#L27">FluentDynameh.ts:27</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/5c8956a/src/FluentDynameh.ts#L27">FluentDynameh.ts:27</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">TResult</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -430,7 +430,7 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-class tsd-parent-kind-external-module">
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter">
 						<a href="_fluentdynameh_.fluentdynameh.html" class="tsd-kind-icon">Fluent<wbr>Dynameh</a>
 					</li>
 				</ul>
